# ADIOS2-Examples

./: .gitignore  CMakeLists.txt  ReadMe.md  azure-pipelines.yaml  azure-set-container.yaml  make.settings  meson.build  meson_options.txt
.github/workflows/: build-and-test.yml
cmake/: Functions.cmake
cpp/: CMakeLists.txt  make.settings
cpp/heat/: CMakeLists.txt  Makefile  ReadMe.md
cpp/heat/analysis/: AnalysisSettings.cpp  AnalysisSettings.h  CMakeLists.txt  heatAnalysis.cpp
cpp/heat/runtimecfg/: adios1.xml  bpfile.xml  dataman.xml  hdf5.xml  insitu_dataman.xml  insitu_sst.xml  insitumpi.xml  mixed.xml  sst.xml
cpp/heat/simulation/: CMakeLists.txt  HeatTransfer.cpp  HeatTransfer.h  IO.h  IO_adios2.cpp  Settings.cpp  Settings.h  heatSimulation.cpp
cpp/heat/visualization/: CMakeLists.txt  VizOutput.h  VizOutputPrint.cpp  VizOutputVtkm.cpp  VizSettings.cpp  VizSettings.h  heatVisualization.cpp
cpp/writetest/: CMakeLists.txt  writetest.cpp
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/concepts/: adiosobjects.rst  anatomy.rst  deferredvssync.rst  mpmd.rst  streamvsfile.rst
docs/source/fortran/: fortran.rst  variables.rst
docs/source/introduction/: introduction.rst  manualbuild.rst
docs/source/performance/: aggregation.rst
docs/source/variables/: globalarray.rst  introduction.rst
scripts/ci/: user-setup.sh
scripts/ci/azure/: build.sh  init.sh
scripts/ci/azure/ubuntu18.04/: Dockerfile
scripts/conda/: build.sh  meta.yaml
scripts/developer/: setup.sh
source/: CMakeLists.txt  meson.build
source/c/: CMakeLists.txt  meson.build
source/c/001_hello-world/: CMakeLists.txt  hello-world.c  meson.build
source/c/hello-world/: CMakeLists.txt  hello-world.c  meson.build
source/c/shapes/: CMakeLists.txt  Makefile  decomp.c  decomp.h  global-array-fixed-read.c  global-array-fixed-write.c  mpivars.c  mpivars.h
source/cpp/: CMakeLists.txt  meson.build
source/cpp/001_hello-world/: CMakeLists.txt  hello-world.cpp  hello-world_hl.cpp  meson.build
source/cpp/002_basics/: CMakeLists.txt  meson.build  variables-shapes.cpp  variables-shapes_hl.cpp
source/cpp/003_gray-scott/: CMakeLists.txt  README.md  meson.build
source/cpp/003_gray-scott/simulation/: gray-scott.cpp  settings-files.json  writer.cpp
source/cpp/basics/: CMakeLists.txt  meson.build  thread-write.cpp  variables-shapes-hl.cpp  variables-shapes.cpp
source/cpp/gray-scott/: CMakeLists.txt  README.md  adios2.xml  meson.build
source/cpp/gray-scott-struct/: CMakeLists.txt  README.md  adios2.xml
source/cpp/gray-scott-struct/analysis/: curvature.cpp  isosurface.cpp  pdf-calc.cpp
source/cpp/gray-scott-struct/catalyst/: gs-pipeline.py
source/cpp/gray-scott-struct/plot/: decomp.py  pdfplot.py
source/cpp/gray-scott-struct/simulation/: gray-scott.cpp  gray-scott.h  main.cpp  restart.cpp  restart.h  settings.cpp  writer.cpp  writer.h
source/cpp/gray-scott/analysis/: curvature.cpp  find_blobs.cpp  isosurface.cpp  pdf-calc.cpp
source/cpp/gray-scott/catalyst/: gs-pipeline.py
source/cpp/gray-scott/plot/: gsplot.py  pdfplot.py  render_isosurface.cpp
source/cpp/gray-scott/simulation/: gray-scott.cpp  gray-scott.h  main.cpp  restart.cpp  restart.h  settings.cpp  settings.h  writer.cpp  writer.h
source/cpp/heat/: adios2.xml
source/cpp/heat/analysis/: AnalysisSettings.cpp  AnalysisSettings.h
source/cpp/heat/runtimecfg/: hdf5.xml  insitu_dataman.xml  sst.xml
source/cpp/heat/simulation/: heatSimulation.cpp
source/cpp/heat/visualization/: CMakeLists.txt  VizOutputVtkm.cpp
source/cpp/hello-world/: CMakeLists.txt  hello-world-hl.cpp  hello-world.cpp  meson.build
source/cpp/korteweg-de-vries/: CMakeLists.txt  KdV.cpp  graph.py  graph_solution.py
source/cpp/lorenz_ode/: CMakeLists.txt  lorenz.cpp  lorenz.hpp  lorenz_reader.cpp  lorenz_writer.cpp
source/fortran/: CMakeLists.txt
source/fortran/adios-module/: CMakeLists.txt  Makefile  adiosio.F90  main.F90
source/fortran/shapes/: CMakeLists.txt  Makefile  global-array-changing-shape-write.F90  global-array-fixed-read.F90  global-array-fixed-write.F90  shapes-read.F90  shapes-write.F90  shapes.xml  values.F90
source/gpu/: CMakeLists.txt
source/gpu/basics-cuda/: CMakeLists.txt  cudaRoutines.cu  cudaRoutines.h  write-read-cuda.cpp
source/gpu/basics-hip/: CMakeLists.txt  write-read-hip.cpp
source/gpu/basics-kokkos/: CMakeLists.txt  write-read-kokkos.cpp
source/gpu/gray-scott-kokkos/: CMakeLists.txt  gray-scott.cpp  gray-scott.h  main.cpp  restart.cpp  restart.h  timer.hpp  writer.cpp  writer.h
source/julia/GrayScott.jl/: .JuliaFormatter.toml  Project.toml  ReadMe.md
source/julia/GrayScott.jl/examples/: settings-files.json
source/julia/GrayScott.jl/scripts/: config_crusher.sh  config_summit.sh  job_crusher.sh  job_summit.sh
source/julia/GrayScott.jl/src/: GrayScott.jl
source/julia/GrayScott.jl/src/helper/: Helper.jl  helperMPI.jl
source/julia/GrayScott.jl/src/simulation/: Inputs.jl  Settings.jl  Simulation.jl  Simulation_AMDGPU.jl  Simulation_CUDA.jl  Structs.jl
source/julia/GrayScott.jl/test/: runtests.jl
source/julia/GrayScott.jl/test/unit/helper/: unit-helperMPI.jl
source/julia/GrayScott.jl/test/unit/simulation/: unit-Inputs.jl
source/manual-build/: Makefile  Readme.md  example-mpi.F90  example-mpi.c  example-mpi.cpp  example-serial.F90  example-serial.c  example-serial.cpp
source/python/: hello-world.py
tutorial/: CMakeLists.txt
tutorial/00_helloworld/: CMakeLists.txt  helloworld.cxx  helloworld_solution.cxx
tutorial/00_helloworld_basic/: CMakeLists.txt  helloworld.cxx  helloworld_solution.cxx
tutorial/01_variables/: variables.cxx  variables_solution.cxx
