#------------------------------------------------------------------------------#
# Distributed under the OSI-approved Apache License, Version 2.0.  See
# accompanying file Copyright.txt for details.
#------------------------------------------------------------------------------#

option('ADIOS2_DIR', type : 'string', value : '/usr', description : 'ADIOS2 location')

